--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frey_medium-common",
-  "version": "1.0.14",
+  "version": "1.1.4",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -11,5 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "zod": "^3.22.4"
-  }
+  },
+  "files": [
+  "dist",
+  "index.js",
+  "index.d.ts"
+]
 }
