--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "frey_medium-common": "^1.1.8",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.515.0",
