--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "frey_medium-common": "^1.1.8",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.515.0",
